tests/NormalTests/paczka1/fuzzy1/15506937.err
Error in line 12: T7GzAey S118 1,81
Error in line 13: TBV S335 19,9
Error in line 11: T7GzAey S118 139,4
